# navigator-cli

./: .env.example  .gitignore  README.md  __main__.py  history.py  mcp_client.py  navigator_cli.py  pyproject.toml
.github/workflows/: ci.yml
mcp_servers/: csv_tools.py  sample_data.csv
tests/: test_csv_tools.py  test_history.py  test_mcp_client.py  test_navigator_cli.py
